feat: amplia configurações administrativas
